--- a/frontend/src/styles/pages/dashboard.scss
+++ b/frontend/src/styles/pages/dashboard.scss
@@ -8,8 +8,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-}
 
-.dashboard-card .text-3xl {
-  line-height: 1;
+  .text-3xl {
+    line-height: 1;
+  }
 }
