--- a/src/pages/Inventory/Inventory.scss
+++ b/src/pages/Inventory/Inventory.scss
@@ -2,7 +2,7 @@
  * Inventory Page Styles - Smart Inventory Module with Glassmorphism
  */
 
-@use '../styles/variables' as *;
+@use '../../styles/variables' as *;
 
 .inventory-page {
   padding: $spacing-6;
