--- a/src/pages/WorkOrders/WorkOrders.scss
+++ b/src/pages/WorkOrders/WorkOrders.scss
@@ -2,7 +2,7 @@
  * Work Orders Page Styles
  */
 
-@use '../styles/variables' as *;
+@use '../../styles/variables' as *;
 
 .work-orders {
   &__header {
