--- a/src/components/shared/Modal.scss
+++ b/src/components/shared/Modal.scss
@@ -102,3 +102,64 @@
     opacity: 1;
   }
 }
+
+// Mobile Responsive
+@media (max-width: 768px) {
+  .modal-overlay {
+    padding: $spacing-2;
+    align-items: flex-end;
+  }
+
+  .modal {
+    max-height: 95vh;
+    border-radius: $radius-lg $radius-lg 0 0;
+
+    &--sm,
+    &--md,
+    &--lg,
+    &--xl {
+      max-width: 100%;
+    }
+
+    &__header {
+      padding: $spacing-4;
+    }
+
+    &__title {
+      font-size: $font-size-xl;
+    }
+
+    &__body {
+      padding: $spacing-4;
+    }
+
+    &__footer {
+      padding: $spacing-4;
+      flex-direction: column-reverse;
+
+      button {
+        width: 100%;
+      }
+    }
+  }
+}
+
+@media (max-width: 480px) {
+  .modal {
+    &__header {
+      padding: $spacing-3;
+    }
+
+    &__title {
+      font-size: $font-size-lg;
+    }
+
+    &__body {
+      padding: $spacing-3;
+    }
+
+    &__footer {
+      padding: $spacing-3;
+    }
+  }
+}
